--- a/src/App.css
+++ b/src/App.css
@@ -1437,10 +1437,11 @@ html, body, #root, .app-container {
 }
 
 .patients-table th {
-  background: #f3f4f6;
+  background: #4c505c;
+  height: 40px;
   padding: 1rem;
   text-align: left;
-  color: #4b5563;
+  color: #e7ecf2;
   font-weight: 600;
   white-space: nowrap;
 }
