--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,16 @@
 }
 @import "tailwindcss";
 
+*::-webkit-scrollbar {
+  display: none;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 
 @theme{
   --font-sf: sf-pro-display, 'sans-serif';
